name:                FlipIt
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/FlipIt#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
extra-source-files:  src/finiteGauss.h, src/flipItSolver.h
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     FlipIt
  build-depends:       base >= 4.7 && < 5
                     , gtk
                     , cairo
                     , random
                     , array
  default-language:    Haskell2010
  c-sources:	       src/finiteGauss.c, src/flipItSolver.c
  include-dirs:	       src

executable FlipIt-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , FlipIt
                     , gtk
                     , cairo
                     , random
                     , array
  default-language:    Haskell2010

test-suite FlipIt-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , FlipIt
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/FlipIt
